--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --yellow: #f5c32c;
   --orange: #fca61f;
   --black: #242d49;
+  --backgroundColor:#f3f3f3;
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
   --hrColor: #cfcdcd;
@@ -11,5 +12,21 @@
   --photo: #4CB256;
   --video: #4A4EB7;
   --location: #EF5757;
---shedule: #E1AE4A;
+  --shedule: #E1AE4A;
+}
+
+.App{
+  overflow: hidden;
+  color: var(--black);
+  background-color: var(--backgroundColor);
+  padding: 1rem 1rem;
+}
+/* styiling the blur areas*/
+.blur{
+  position: absolute;
+  width: 22rem; /*the width & height can vary */
+  height: 14rem;
+  border-radius: 50%;
+  background-color: #a6ddf0;
+  filter: blur(72px);
 }
