--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   --photo: #4CB256;
   --video: #4A4EB7;
   --location: #EF5757;
-  --shedule: #E1AE4A;
+  --schedule: #E1AE4A;
 }
 
 .App{
@@ -29,4 +29,21 @@
   border-radius: 50%;
   background-color: #a6ddf0;
   filter: blur(72px);
+}
+.button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border: none;
+  outline: none;
+  border-radius: 0.5rem;
+  background:var(--buttonBg);
+  transition:all 100ms ease-out;
+}
+.button:hover{
+  cursor: pointer;
+  color: var(--orange);
+  background: transparent;
+  border: 1px solid var(--orange);
 }
