--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,7 @@
   background: transparent;
   border: 1px solid var(--orange);
 }
+/* remove the scrollbar*/
+::-webkit-scrollbar{
+  display: none;
+}
