--- a/src/components/PostSection/PostShare/postshare.css
+++ b/src/components/PostSection/PostShare/postshare.css
@@ -47,3 +47,20 @@
     padding: 0 15px;
     font-size: 12px;
 }
+
+.preview-image{
+    position: relative;
+}
+.preview-image>svg{
+    position: absolute;
+    right: 1rem;
+    top: 0.5rem;
+    cursor: pointer;
+}
+.preview-image>img{
+    width: 100%;
+    max-height: 20rem;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 0.5rem;
+}
