--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -30,3 +30,42 @@
     -moz-text-fill-color:transparent;
 
 }
+
+.page-name>h6{
+    font-size: 0.86rem;
+}
+
+.info-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.info-input{
+    border: none;
+    outline: none;
+    background-color: var(--inputColor);
+    border-radius: 8px;
+    padding: 20px;
+    flex:1;
+}
+.info-form>div{
+    display: flex;
+    gap: 1rem;
+    height: 2rem;
+    width:100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.info-btn{
+    width: 6rem;
+    height: 2rem;
+    align-self: flex-end;
+}
+.auth-form{
+    background-color: var(--cardColor);
+    border-radius: 1rem;
+    padding: 1rem;
+}
